// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MapboxAdminConfig/> should render 1`] = `
<ContainerConstructor
  anyTouched={false}
  array={
    Object {
      "insert": [MockFunction],
      "move": [MockFunction],
      "pop": [MockFunction],
      "push": [MockFunction],
      "remove": [MockFunction],
      "removeAll": [MockFunction],
      "shift": [MockFunction],
      "splice": [MockFunction],
      "swap": [MockFunction],
      "unshift": [MockFunction],
    }
  }
  asyncValidate={[MockFunction]}
  asyncValidating={false}
  autofill={[MockFunction]}
  blur={[MockFunction]}
  change={[MockFunction]}
  clearAsyncError={[MockFunction]}
  clearSubmit={[MockFunction]}
  componentRef={null}
  destroy={[MockFunction]}
  dirty={false}
  dispatch={[MockFunction]}
  error={null}
  form="formName"
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  initialize={[MockFunction]}
  initialized={true}
  invalid={false}
  mapToken={
    Object {
      "id": "mapboxMapToken",
      "provider": "MAPBOX",
      "publicToken": "publicToken",
      "secretToken": "secretToken",
      "styleId": null,
      "styleOwner": null,
      "styles": Array [],
    }
  }
  pristine={true}
  reset={[MockFunction]}
  submitFailed={false}
  submitSucceeded={false}
  submitting={false}
  touch={[MockFunction]}
  untouch={[MockFunction]}
  valid={true}
  warning={null}
/>
`;

exports[`<MapboxAdminConfig/> should render with styles 1`] = `
<ContainerConstructor
  anyTouched={false}
  array={
    Object {
      "insert": [MockFunction],
      "move": [MockFunction],
      "pop": [MockFunction],
      "push": [MockFunction],
      "remove": [MockFunction],
      "removeAll": [MockFunction],
      "shift": [MockFunction],
      "splice": [MockFunction],
      "swap": [MockFunction],
      "unshift": [MockFunction],
    }
  }
  asyncValidate={[MockFunction]}
  asyncValidating={false}
  autofill={[MockFunction]}
  blur={[MockFunction]}
  change={[MockFunction]}
  clearAsyncError={[MockFunction]}
  clearSubmit={[MockFunction]}
  componentRef={null}
  destroy={[MockFunction]}
  dirty={false}
  dispatch={[MockFunction]}
  error={null}
  form="formName"
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  initialize={[MockFunction]}
  initialized={true}
  invalid={false}
  mapToken={
    Object {
      "id": "mapboxMapToken",
      "provider": "MAPBOX",
      "publicToken": "publicToken",
      "secretToken": "secretToken",
      "styleId": "lebotheme",
      "styleOwner": "capcollectif",
      "styles": Array [
        Object {
          "createdAt": "2018-11-23 00:00:00",
          "id": "mapStyle1",
          "isCurrent": true,
          "name": "Le bo thème",
          "owner": "capcollectif",
          "previewUrl": "https://api.mapbox.com/styles/v1/capcollectif/lebotheme/tiles/256/14/8114/5686?access_token=***REMOVED***",
          "updatedAt": null,
        },
        Object {
          "createdAt": "2018-11-23 00:00:00",
          "id": "mapStyle2",
          "isCurrent": false,
          "name": "Le bo thème 2",
          "owner": "capcollectif",
          "previewUrl": "https://api.mapbox.com/styles/v1/capcollectif/lebotheme2/tiles/256/14/8114/5686?access_token=***REMOVED***",
          "updatedAt": "2018-11-23 10:00:00",
        },
      ],
    }
  }
  pristine={true}
  reset={[MockFunction]}
  submitFailed={false}
  submitSucceeded={false}
  submitting={false}
  touch={[MockFunction]}
  untouch={[MockFunction]}
  valid={true}
  warning={null}
/>
`;
